<?xml version="1.0"?>
<package format="2">
  <name>dsor_filter</name>
  <version>1.0.0</version>
  <description>The Dynamic Statistical Outlier Removal filter</description>

  <!-- maintainer -->
  <maintainer email="amkurup@mtu.edu">amkurup</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
